--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-    "name": "stocks",
-    "description": "Stocks Application",
-    "version": "0.0.1",
-    "private": true,
-    "dependencies": {
-        "express": "3.x"
-    }
+  "name": "stocks",
+  "description": "Our sample Node to Heroku app",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
+  }
 }
